--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mrpollard/react-rss-podcast-player": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "3d-react-carousal": "^5.0.0",
-    "bootstrap": "^5.2.1",
-    "coverflow-react": "^0.1.28",
-    "npm-install-webpack-plugin": "^4.0.5",
+    "bootstrap": "^5.2.2",
+    "mdb-react-ui-kit": "^4.2.0",
     "react": "^16.12.0",
-    "react-coverflow": "^0.2.20",
     "react-dom": "^16.12.0",
     "react-icons": "^4.4.0",
-    "react-owl-carousel": "^2.3.3",
-    "react-responsive-carousel": "^3.2.23",
+    "react-paginate": "^8.1.3",
+    "react-player": "^2.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-share": "^4.4.0",
+    "semantic-ui-react": "^2.1.3",
     "style-loader": "^3.3.1"
   },
   "scripts": {
